# hxm

./: .gitignore  DESIGN.md  FLOW.md  HACKING.md  README.md  REPORT.md  TODO.md  bbox.strace  meson.build  meson_options.txt  xprop.txt
.github/workflows/: ci.yml
coverage/: index.client.c.7eeddcdb2bd1344daca0a340abd305ae.html  index.client.h.1c10025e3b4a1a5e218336a0686076e7.html  index.config.c.75218e1e64b8201a55c2ac2203e8970c.html  index.cookie_jar.c.ea829fc864ede7b1a7ff1fde1b6190e9.html  index.cookie_jar.h.a1239030c872f67e01802aa5191b81c8.html  index.core.c.cdfc1aea8847d91e401cad52d98e6d70.html  index.ds.c.11932bac2bee13114542d14775e91b06.html  index.dummy_client.c.e808e5f5b8485ae8e257b8a8db5aa1bd.html  index.event.c.9aaeeea7d049e7e72712e2431786c414.html  index.event.h.307172d822941f4543c5a3cc1bc29b6f.html  index.focus.c.ad5904013070ef94218ea0ab0834c979.html  index.frame.c.7405bad813f0203dcad183c0175f4691.html  index.functions.html  index.handle.h.8bd93f4c1cd52f64ca272dd603bfdf73.html  index.handle_conv.h.593bf4d6425e585b312f99563965ef45.html  index.html  index.hxm.h.029698f5fc6c6bd66d80da244f263faa.html  index.include.d436eb0fd9de10b54a828ce6435f7e81.html  index.integration_client.c.7d7b0b769a22d097c0bc377c04c9700e.html  index.log.c.47179e5db7ed3f2db741c99372ba24f3.html  index.main.c.803c5170888b8642f2a97e5e9423d399.html  index.menu.c.e34f1289115c48281ded41e6982159e7.html  index.parity_client.c.c4325df032800e5482fbda577410ad69.html  index.render.c.8cf29ec1e5111c0908ae0a453000909a.html  index.slotmap.h.7e3311749b15f0b470d4a850b49dc7ba.html  index.src.25d902c24283ab8cfbac54dfa101ad31.html  index.stack.c.8f4834529055a5b32bf9981607e87e46.html  index.stress_lifecycle.c.616ddfcbf256928f29dcf51da4d6cd1b.html  index.test_colormap.c.d250bd4b1c3dc5e2516f5ff70390f1b7.html  index.test_config_parsing.c.b5f8a802b189bc09f43dfa3590e24350.html  index.test_configure_geometry.c.e29d73140550e44f6fdc92fb91792ace.html  index.test_cookie_jar.c.41a6afee9b75e33377f19d616d024702.html  index.test_core.c.b7637094f3b7716944cef52af2af636a.html  index.test_dirty_region.c.e374b404445c796d496abb368c479435.html  index.test_ds.c.79e96a552228c00a35cdd458815214b3.html  index.test_event_ingest.c.15b3cf2001872d6a87b507c0b9e4ea56.html  index.test_ewmh_check.c.e86977202b8999c1d9e06ee9e272108b.html  index.test_ewmh_ext.c.c4912e01665d3611ce2b953e20afa608.html  index.test_ewmh_negative.c.bc3c05b95b1f85c5e9a1d7772c3859e1.html  index.test_ewmh_props.c.b399de33bc4a999693b2a73ec5dd3116.html  (+43 more)
data/: bbox.conf  bbox.desktop  hxm.conf  hxm.desktop  menu.conf
docs/: THEME.md
include/: bbox.h  client.h  config.h  containers.h  cookie_jar.h  ds.h  event.h  frame.h  handle.h  handle_conv.h  hxm.h  hxm_diag.h  menu.h  render.h  slotmap.h  snap.h  snap_preview.h  theme.h  wm.h  xcb_utils.h
llm-report/: README.md  REPORT.md
sanitizers/: tsan.supp
scripts/: deps-fedora.txt  gen_llm_report.py  gen_reports.sh  generate_full_report.sh  install_git_hooks.sh  parity-smoke-test.sh  run-perf-harness.sh  run-xephyr.sh  snapshot-client-layout.sh  stress-test.py  test-headless.sh  test-integration-real-x11.sh  test-integration.sh
scripts/ci/: check_cookie_handler_ownership.py  check_sync_reply_allowlist.py  fail_on_skips.py  sync_reply_allowlist.txt
src/: client.c  client_layout_dump.c  config.c  containers.c  cookie_jar.c  core.c  diag.c  ds.c  event.c  focus.c  frame.c  log.c  main.c  menu.c  perf_harness.c  render.c  snap.c  snap_preview.c  stack.c  wm.c  wm_desktop.c  wm_dirty.c  wm_input_keys.c  wm_internal.h  wm_reply.c  xcb_utils.c
tests/: dummy_client  dummy_client.c  integration_client.c  parity_client.c  repro_tiny_window.c  stress_lifecycle.c  test_ci_workflow.py  test_client_hot_guard.sh  test_client_layout_dump.sh  test_client_layout_snapshot_script.sh  test_colormap.c  test_config_parsing.c  test_configure_geometry.c  test_containers.c  test_cookie_handler_ownership.sh  test_cookie_jar.c  test_core.c  test_dirty_region.c  test_ds.c  test_event_ingest.c  test_event_process.c  test_ewmh.c  test_ewmh_check.c  test_ewmh_ext.c  test_ewmh_negative.c  test_ewmh_props.c  test_expose_damage.c  test_fail_on_skips.sh  test_focus.c  test_frame_destroy.c  test_frame_render.c  test_fullscreen.c  test_gtk_decorations.c  test_gtk_extents.c  test_gtk_extents_update.c  test_icccm.c  test_icccm_fuzz.c  test_icccm_props_extra.c  test_input_interaction.c  test_integration_real_x11_script.sh  (+40 more)
tests/ewmh/: conky_probe.c  conky_test.conf  normal_client.c  panel_simulator  panel_simulator.c  run_conky_probe.sh  run_in_xvfb.sh  test_desktops.sh  test_restart.sh  test_state_remove.sh  test_strut_removal.sh  x_test_client  x_test_client.c
